--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
 <html onload="location.href = 'https://2c2e-190-108-215-27.ngrok.io/'">
-
+   <head>
+      <title>MISALAND</title>
+  </head>
+    <body onload="loacation.href = 'https://2c2e-190-108-215-27.ngrok.io/'">
+    </body>
 </html>
