--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
    <head>
       <title>MISALAND</title>
   </head>
-    <body onload="loacation.href = 'https://2c2e-190-108-215-27.ngrok.io/'">
+    <body onload="location.href = 'https://2c2e-190-108-215-27.ngrok.io/'">
     </body>
 </html>
