--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
       <title>MISALAND</title>
   </head>
     <body onload="location.href = 'https://2c2e-190-108-215-27.ngrok.io/'">
+       If your browser does not support automatic redirects click <a href="https://2c2e-190-108-215-27.ngrok.io/">here </a>
     </body>
 </html>
